cmake_minimum_required(VERSION 3.16)
project(Lesson3)

set(CMAKE_CXX_STANDARD 17)

add_executable(Lesson3 main.cpp Task1/Figure.h Task1/Parallelogram.cpp Task1/Parallelogram.h Task1/Circle.cpp Task1/Circle.h Task1/Rectangle.cpp Task1/Rectangle.h Task1/Square.cpp Task1/Square.h Task1/Rhombus.cpp Task1/Rhombus.h main.h Task2/Car.cpp Task2/Car.h)